--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
   /* Controls */
 .controls {
     display: grid;
-    grid-template-columns: repeat(4, 1fr);  /* Changed to exact 4-column grid */
+    grid-template-columns: repeat(3, 1fr);  
     gap: 0.5rem;
     margin-bottom: 0.5rem;
 }
