--- a/index.html
+++ b/index.html
@@ -2841,83 +2841,56 @@ function toggleOrdersView() {
 
 
 
+// ——— Oxygen Therapy ———
+const o2TherapyEntries = Array.from(
+  text.matchAll(
+    /Oxygen Therapy:\s*([^\(]+)\s*\((\d{2}\/\d{2}\/\d{2} \d{2}:\d{2}:\d{2})\)/gi
+  )
+);
+if (o2TherapyEntries.length) {
+  // sort by the timestamp string
+  o2TherapyEntries.sort((a,b) => new Date(a[2]) - new Date(b[2]));
+  // take the last (most recent)
+  data.o2therapyRaw  = o2TherapyEntries.pop()[1].trim();
+  const raw = data.o2therapyRaw.toLowerCase();
 
-		
-  // ——— Oxygen Therapy ———
-  const o2TherapyEntries = Array.from(
-    text.matchAll(
-      /Oxygen Therapy:\s*([^\(]+)\s*\((\d{2}\/\d{2}\/\d{2} \d{2}:\d{2}:\d{2})\)/gi
-    )
-  );
-  if (o2TherapyEntries.length) {
-    o2TherapyEntries.sort((a, b) => new Date(a[2]) - new Date(b[2]));
-    data.o2therapyRaw  = o2TherapyEntries.pop()[1].trim();
-    const raw = data.o2therapyRaw.toLowerCase();
+  // map to short codes
+  if (/room air/.test(raw))                      data.o2therapyCode = 'RA';
+  else if (/high[- ]flow nasal cannula/.test(raw))data.o2therapyCode = 'HFNC';
+  else if (/nasal cannula/.test(raw) && !/high/.test(raw)) data.o2therapyCode = 'NC';
+  else if (/ventilator/.test(raw))                data.o2therapyCode = 'Vent';
+  else if (/non-?rebreather/.test(raw))           data.o2therapyCode = 'NRB';
+  else                                            data.o2therapyCode = 'O2';
+}
 
-    // map mechanical vents → “Vent”, everything else as before
-    if (/room air/.test(raw))                                   data.o2therapyCode = 'RA';
-    else if (/high[- ]flow nasal cannula/.test(raw))            data.o2therapyCode = 'HFNC';
-    else if (/nasal cannula/.test(raw))                         data.o2therapyCode = 'NC';
-    else if (/mechanical ventilator/.test(raw))                 data.o2therapyCode = 'Vent';
-    else if (/non-?rebreather/.test(raw))                       data.o2therapyCode = 'NRB';
-    else                                                         data.o2therapyCode = 'O2';
-  }
+// ——— Oxygen Flow Rate ———
+const flowEntries = Array.from(
+  text.matchAll(
+    /Oxygen Flow Rate:\s*([\d.]+\s*L\/min)\s*\((\d{2}\/\d{2}\/\d{2} \d{2}:\d{2}:\d{2})\)/gi
+  )
+);
+if (flowEntries.length) {
+  flowEntries.sort((a,b) => new Date(a[2]) - new Date(b[2]));
+  data.o2flowRaw = flowEntries.pop()[1].trim();  // e.g. "50 L/min"
+}
 
-  // ——— Oxygen Flow Rate ———
-  const flowEntries = Array.from(
-    text.matchAll(
-      /Oxygen Flow Rate:\s*([\d.]+\s*L\/min)\s*\((\d{2}\/\d{2}\/\d{2} \d{2}:\d{2}:\d{2})\)/gi
-    )
-  );
-  if (flowEntries.length) {
-    flowEntries.sort((a, b) => new Date(a[2]) - new Date(b[2]));
-    data.o2flowRaw = flowEntries.pop()[1].trim();  // e.g. "50 L/min"
-  }
+// ——— Ventilator Settings ———
+// All of these use the same pattern: capture the value, capture the timestamp
+const pickLatest = (regex) => {
+  const arr = Array.from(text.matchAll(regex));
+  if (!arr.length) return null;
+  arr.sort((a,b) => new Date(a[2]) - new Date(b[2]));
+  return arr.pop()[1].trim();
+};
 
-  // ——— Ventilator Settings ———
-  // Mode
-  const modeEntries = Array.from(
-    text.matchAll(/Ventilator Mode:\s*([^\(]+)\s*\(([^)]+)\)/gi)
-  );
-  if (modeEntries.length) {
-    modeEntries.sort((a, b) => new Date(a[2]) - new Date(b[2]));
-    data.ventModeRaw = modeEntries.pop()[1].trim();
-  }
-  // Frequency
-  const freqEntries = Array.from(
-    text.matchAll(/Ventilator Frequency, Mandatory:\s*(\d+)\s*br\/min\s*\(([^)]+)\)/gi)
-  );
-  if (freqEntries.length) {
-    freqEntries.sort((a, b) => new Date(a[2]) - new Date(b[2]));
-    data.ventFrequencyRaw = freqEntries.pop()[1];
-  }
-  // Tidal Volume
-  const tvEntries = Array.from(
-    text.matchAll(/Tidal Volume, Delivered:\s*(\d+)\s*mL\s*\(([^)]+)\)/gi)
-  );
-  if (tvEntries.length) {
-    tvEntries.sort((a, b) => new Date(a[2]) - new Date(b[2]));
-    data.ventTidalRaw = tvEntries.pop()[1];
-  }
-  // PEEP
-  const peepEntries = Array.from(
-    text.matchAll(/Positive End Expiratory Pressure:\s*(\d+)\s*cmH2O\s*\(([^)]+)\)/gi)
-  );
-  if (peepEntries.length) {
-    peepEntries.sort((a, b) => new Date(a[2]) - new Date(b[2]));
-    data.ventPeepRaw = peepEntries.pop()[1];
-  }
-  // FiO2
-  const fio2Entries = Array.from(
-    text.matchAll(/FIO2:\s*(\d+)\s*%\s*\(([^)]+)\)/gi)
-  );
-  if (fio2Entries.length) {
-    fio2Entries.sort((a, b) => new Date(a[2]) - new Date(b[2]));
-    data.ventFiO2Raw = fio2Entries.pop()[1] + '%';
-  }
+data.ventModeRaw      = pickLatest(/Ventilator Mode:\s*([^\(]+)\s*\((\d{2}\/\d{2}\/\d{2} \d{2}:\d{2}:\d{2})\)/gi);
+data.ventFrequencyRaw = pickLatest(/Ventilator Frequency, Mandatory:\s*(\d+)\s*br\/min\s*\((\d{2}\/\d{2}\/\d{2} \d{2}:\d{2}:\d{2})\)/gi);
+data.ventTidalRaw     = pickLatest(/Tidal Volume, Delivered:\s*(\d+)\s*mL\s*\((\d{2}\/\d{2}\/\d{2} \d{2}:\d{2}:\d{2})\)/gi);
+data.ventPeepRaw      = pickLatest(/Positive End Expiratory Pressure:\s*(\d+)\s*cmH2O\s*\((\d{2}\/\d{2}\/\d{2} \d{2}:\d{2}:\d{2})\)/gi);
+data.ventFiO2Raw      = pickLatest(/FIO2:\s*(\d+)\s*%\s*\((\d{2}\/\d{2}\/\d{2} \d{2}:\d{2}:\d{2})\)/gi);
 
-
-
+// Now data.o2therapyRaw, data.o2therapyCode, data.o2flowRaw,
+// and ventModeRaw/frequency/tidal/peep/FiO2Raw are all set.
 
 		
 
