--- a/index.html
+++ b/index.html
@@ -4303,15 +4303,12 @@ function extractOrders(text) {
         'dextrose': { abbr: 'D', category: 'N/F' },
         'd5w': { abbr: 'D5W', category: 'N/F' },
         'd5ns': { abbr: 'D5NS', category: 'N/F' },
-        'albumin': { abbr: 'alb', category: 'N/F' }
+        'albumin': { abbr: 'alb', category: 'N/F' },
 	'parenteral nutrition': { abbr: 'TPN', category: 'N/F' },
 	'total parenteral nutrition': { abbr: 'TPN', category: 'N/F' },
 	'tpn': { abbr: 'TPN', category: 'N/F' },
 	'peripheral parenteral nutrition': { abbr: 'PPN', category: 'N/F' },
 	'ppn': { abbr: 'PPN', category: 'N/F' },
-	'intralipid': { abbr: 'lipids', category: 'N/F' },
-	'lipid emulsion': { abbr: 'lipids', category: 'N/F' },
-	'amino acids': { abbr: 'AA', category: 'N/F' },
     };
 
     // Helper function to extract dose and frequency
