--- a/index.html
+++ b/index.html
@@ -455,6 +455,8 @@
     gap: 0.5rem;
     margin-top: 1rem;
     max-width: 600px;
+    grid-template-columns: repeat(3,1fr);
+    grid-template-rows: repeat(1,1fr);
 }
 
 .view-button {
@@ -680,35 +682,43 @@ input[type="text"],
     margin-bottom: 0.5rem;
   }
 
-  /* MOBILE VIEW SELECTOR */
-  .view-selector {
-    display: grid;
-    gap: 0.3rem;
-    margin-top: 0.5rem;
-    width: 100%;
-    height: 100px;
-    padding: 0.4rem;
-    background: rgba(30, 30, 30, 0.2);
-  }
-  .view-button {
-    padding: 0.5rem 0.3rem;
-    font-size: 0.7rem;
-    text-align: center;
-    white-space: nowrap;
-    overflow: hidden;
-    text-overflow: ellipsis;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    border-radius: 0.25rem;
-    width: 100%;
-    height: 100%;
-    min-height: 35px;
-    box-sizing: border-box;
-  }
-  .view-button:nth-child(1) { grid-column: 1; grid-row: 1; }
-  .view-button:nth-child(2) { grid-column: 2; grid-row: 1; }
-  .view-button:nth-child(3) { grid-column: 3; grid-row: 1; }
+/* MOBILE VIEW SELECTOR */
+.view-selector {
+  display: grid;
+  grid-template-columns: repeat(3, 1fr);
+  gap: 0.3rem;
+  margin-top: 0.5rem;
+  width: 100%;
+  padding: 0.4rem;
+  background: rgba(30, 30, 30, 0.2);
+
+  /* remove any fixed height so it will shrink-wrap to its contents */
+  height: auto;
+  /* you can also drop grid-template-rows entirely—it defaults to one auto-sized row */
+}
+
+/* make the buttons small and equal-height */
+.view-button {
+  padding: 0.25rem;
+  font-size: 0.7rem;
+  text-align: center;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+  border-radius: 0.25rem;
+  box-sizing: border-box;
+
+  /* fix the height to something compact */
+  height: 30px;
+  /* let width fill its grid cell evenly */
+  width: 100%;
+}
+
 
   /* REST OF MOBILE FORM & TABLE STYLES (unchanged) */
   #editForm {
