--- a/index.html
+++ b/index.html
@@ -457,6 +457,7 @@
     max-width: 600px;
     grid-template-columns: repeat(3,1fr);
     grid-template-rows: repeat(1,1fr);
+    justify-content: center;
 }
 
 .view-button {
