--- a/index.html
+++ b/index.html
@@ -4786,7 +4786,9 @@ function extractOrders(text) {
         'amoxicillin': { abbr: 'amox', category: 'Abx' },
         'trimethoprim': { abbr: 'bactrim', category: 'Abx' },
         'sulfamethoxazole': { abbr: 'bactrim', category: 'Abx' },
-        'linezolid': { abbr: 'zyvox', category: 'Abx' },
+        'linezolid': { abbr: 'linezolid', category: 'Abx' },
+	'ertapenem': { abbr: 'ertapenem', category: 'Abx' },
+	'ceftriaxone': { abbr: 'ceftriaxone', category: 'Abx' },
         
         // Pressors
         'norepinephrine': { abbr: 'levo', category: 'Abx' },
