--- a/index.html
+++ b/index.html
@@ -5152,7 +5152,7 @@ function extractDoseInfo(line) {
     modal.innerHTML = `
         <div class="modal-content" style="max-width: 800px;">
             <span class="close" onclick="this.closest('.modal').remove()" style="float: right; font-size: 30px; cursor: pointer; color: var(--danger);">&times;</span>
-            <h2 style="color: var(--primary); margin-bottom: 1rem;">Staff Presentation</h2>
+            <h2 style="color: var(--primary); margin-bottom: 1rem;">Staff</h2>
             <pre style="background: var(--card-bg); padding: 1.5rem; border-radius: 0.5rem; white-space: pre-wrap; font-family: monospace; font-size: 0.9rem; line-height: 1.6; color: var(--text-primary);">${presentation}</pre>
             <div style="margin-top: 1rem; display: flex; gap: 0.5rem;">
                 <button onclick="copyStaffPresentation()">📋 Copy to Clipboard</button>
