--- a/index.html
+++ b/index.html
@@ -668,7 +668,7 @@ input[type="text"],
   /* MODAL BUTTON GRIDS */
   #entryTypeSelection .nav-buttons { grid-template-columns: 1fr; grid-template-rows: repeat(3,1fr); }
   .modal-content .nav-buttons   { grid-template-columns: 1fr; grid-template-rows: repeat(2,1fr); }
-  #consultControls .nav-buttons   { grid-template-columns: 1fr; grid-template-rows: repeat(3,1fr); }
+  #consultControls .nav-buttons   { grid-template-columns: repeat(2, 1fr); grid-template-rows: repeat(2, 1fr); }
   .chart-check-controls           { display: grid; grid-template-columns: 1fr; grid-template-rows: repeat(3,1fr); gap:0.4rem; margin:1rem 0; }
 
   /* DETAILS HEADER FIX */
