--- a/index.html
+++ b/index.html
@@ -989,7 +989,7 @@ input[type="text"],
         let patientData = [];
         let currentPatientIndex = -1;
         let currentViewMode = 'basic'; // basic, chartcheck, consult
-        let selectedColumns = [1, 2, 3]; // Default to Name, RM, MRN
+        let selectedColumns = [1, 2, 3, 19]; // Default to Name, RM, MRN, To do
         let filteredIndexes = [];
         let labData = {};
         let lastImportedData = '';
