--- a/index.html
+++ b/index.html
@@ -2067,15 +2067,15 @@ function processUpdateList() {
 `\\b\\ul Surgery Initial Consultation Note:\\ul0\\b0\\par\\par
 \\b\\ul CC:\\ul0\\b0  ${cc}\\par\\par
 \\b\\ul Subjective:\\ul0\\b0\\par
-HPI:  ${ageGender} ${pmhPhrase} ${hpi}\\par\\par
-ROS:  ${ros}\\par.rosgen\\par\\par
-Meds:  ${meds}\\par
-All:  ${all}\\par
-Surghx:  ${surghx}\\par
-FamHx/Sochx/HCM:  ${fsh}\\par\\par
+\\b HPI: \\b0  ${ageGender} ${pmhPhrase} ${hpi}\\par\\par
+\\b ROS: \\b0  ${ros}\\par.rosgen\\par\\par
+\\b Meds: \\b0   ${meds}\\par
+\\b All: \\b0  ${all}\\par
+\\b Surghx: \\b0   ${surghx}\\par
+\\b FamHx/Sochx/HCM:  \\b0  ${fsh}\\par\\par
 \\b\\ul Objective:\\ul0\\b0\\par
-Physical Exam:  ${pe}\\par.pe\\par
-Labs/imaging:  ${violin}\\par\\par
+\\b Physical Exam: \\b0  ${pe}\\par.pe\\par
+\\b  Labs/imaging: \\b0   ${violin}\\par\\par
 \\b\\ul Assessment:\\ul0\\b0\\par
 ${ageGender} ${pmhPhrase}, surgery consulted for ${cc}\\par\\par
 \\b\\ul Plan:\\ul0\\b0\\par
