--- a/index.html
+++ b/index.html
@@ -5616,7 +5616,7 @@ function extractDoseInfo(line) {
     // Build the presentation
     let presentation = `${cc}\n\n`;
     presentation += `${ageGender} ${pmhPhrase}, ${hpi} ${ros}\n\n`;
-    presentation += `Physical Exam: ${violin} ${pe}\n\n`;
+    presentation += ` ${violin} ${pe}\n\n`;
     presentation += `Plan: ${todo}`;
     
     // Create modal for presentation
