--- a/index.html
+++ b/index.html
@@ -2098,17 +2098,17 @@ function processUpdateList() {
 // Custom labels for consult mode
 const CONSULT_MODE_LABELS = {
     'Name': 'Name',
-    'RM': 'Location',
+    'RM': 'RM',
     'MRN': 'MRN',
     'A/G': 'A/G',
     'CC': 'CC/Level',
     'HPI': 'HPI/Mech',
-    'ROS': 'ROS/1o and 2o',
+    'ROS': 'ROS/1-2o',
     'PMH': 'PMH',
     'Meds': 'Meds',
     'All': 'All',
     'Surg hx': 'SurgHx',
-    'FSH': 'FSH#',
+    'FSH': 'FSHCM#',
     'VIOLIN': 'VIOLIN',
     'PE': 'PE',
     'To do': 'To Do',
