--- a/index.html
+++ b/index.html
@@ -604,23 +604,24 @@
 	    /* Clipboard Button */
 .clipboard-btn {
     position: absolute;
-    right: 1rem;
+    right: 2px;  /* Small gap from edge */
     top: 50%;
     transform: translateY(-50%);
     background: var(--card-bg);
-    border: 2px solid var(--border);
+    border: 1px solid var(--border);  /* Thinner border */
     border-radius: 0.25rem;
-    padding: 0.5rem;
+    padding: 0.25rem;  /* Reduced padding */
     cursor: pointer;
     transition: all 0.3s ease;
-    font-size: 1.2rem;
+    font-size: 1rem;  /* Slightly smaller icon */
     line-height: 1;
     display: flex;
     align-items: center;
     justify-content: center;
-    min-width: 40px;
-    min-height: 40px;
+    min-width: 30px;  /* Smaller minimum width */
+    min-height: 30px;  /* Smaller minimum height */
 }
+	    
 
 .clipboard-btn:hover {
     background: var(--primary);
@@ -667,7 +668,7 @@
 
 
 .row-item {
-    padding-right: 4.5rem; /* Increased padding to prevent text overlap */
+    padding-right: 2.5rem; /* Increased padding to prevent text overlap */
 }
 	
 
@@ -875,17 +876,17 @@ input[type="text"],
 
 
 
-	    .clipboard-btn {
-    min-width: 35px;
-    min-height: 35px;
-    padding: 0.4rem;
-    font-size: 1rem;
-    right: 0;  /* Changed from 0.5rem to 0 */
+.clipboard-btn {
+    min-width: 28px;  /* Smaller on mobile */
+    min-height: 28px;
+    padding: 0.2rem;  /* Less padding */
+    font-size: 0.9rem;  /* Slightly smaller icon */
+    right: 2px;  /* Small gap from edge */
 }
-
 /* Adjust row item padding to make room for clipboard button */
 .row-item {
-    padding-right: 4rem; /* Add extra padding on the right */
+        padding-right: 2.5rem; /* Less padding needed with smaller button */
+
 }
 
 
