--- a/index.html
+++ b/index.html
@@ -5876,7 +5876,7 @@ function extractDoseInfo(line) {
 
 // Build the presentation with patient identifiers at the top
     let presentation = `${name}\n${rm}\nMRN: ${mrn}\n\n`;
-    presentation += `${cc}\n\n`;
+    presentation += `Consult for ${cc}\n\n`;
     presentation += `${ageGender} ${pmhPhrase}, ${hpi} ${ros}\n\n`;
     presentation += `${violin} ${pe}\n\n`;
     presentation += `Plan: ${todo}`;
